@@ -127,6 +127,7 @@ public enum ECTagNames {
 	EC_TAG_LOG_TO_STATUS                      = 0x0007,
 	EC_TAG_BOOTSTRAP_IP                       = 0x0008,
 	EC_TAG_BOOTSTRAP_PORT                     = 0x0008,
+	EC_TAG_CLIENT_ID                          = 0x0009,
 	EC_TAG_CLIENT_NAME                        = 0x0100,
 		EC_TAG_CLIENT_VERSION                     = 0x0101,
 		EC_TAG_CLIENT_MOD                         = 0x0102,
@@ -173,6 +174,7 @@ public enum ECTagNames {
 		EC_TAG_KNOWNFILE_REQ_COUNT_ALL            = 0x0404,
 		EC_TAG_KNOWNFILE_ACCEPT_COUNT             = 0x0405,
 		EC_TAG_KNOWNFILE_ACCEPT_COUNT_ALL         = 0x0406,
+		EC_TAG_KNOWNFILE_AICH_MASTERHASH          = 0x0407,
 	EC_TAG_SERVER                             = 0x0500,
 		EC_TAG_SERVER_NAME                        = 0x0501,
 		EC_TAG_SERVER_DESC                        = 0x0502,
@@ -227,7 +229,8 @@ public enum ECTagNames {
 			EC_TAG_CATEGORY_PRIO                      = 0x1106,
 		EC_TAG_PREFS_GENERAL                      = 0x1200,
 			EC_TAG_USER_NICK                          = 0x1201,
-			EC_TAG_USER_USERHASH                      = 0x1202,
+			EC_TAG_USER_HASH                          = 0x1202,
+			EC_TAG_USER_HOST                          = 0x1203,
 		EC_TAG_PREFS_CONNECTIONS                  = 0x1300,
 			EC_TAG_CONN_DL_CAP                        = 0x1301,
 			EC_TAG_CONN_UL_CAP	                  = 0x1302,
