@@ -124,6 +124,7 @@ public final static short EC_TAG_ED2K_ID                            = 0x0006;
 public final static short EC_TAG_LOG_TO_STATUS                      = 0x0007;
 public final static short EC_TAG_BOOTSTRAP_IP                       = 0x0008;
 public final static short EC_TAG_BOOTSTRAP_PORT                     = 0x0008;
+public final static short EC_TAG_CLIENT_ID                          = 0x0009;
 public final static short EC_TAG_CLIENT_NAME                        = 0x0100;
 public final static short 	EC_TAG_CLIENT_VERSION                     = 0x0101;
 public final static short 	EC_TAG_CLIENT_MOD                         = 0x0102;
@@ -170,6 +171,7 @@ public final static short 	EC_TAG_KNOWNFILE_REQ_COUNT                = 0x0403;
 public final static short 	EC_TAG_KNOWNFILE_REQ_COUNT_ALL            = 0x0404;
 public final static short 	EC_TAG_KNOWNFILE_ACCEPT_COUNT             = 0x0405;
 public final static short 	EC_TAG_KNOWNFILE_ACCEPT_COUNT_ALL         = 0x0406;
+public final static short 	EC_TAG_KNOWNFILE_AICH_MASTERHASH          = 0x0407;
 public final static short EC_TAG_SERVER                             = 0x0500;
 public final static short 	EC_TAG_SERVER_NAME                        = 0x0501;
 public final static short 	EC_TAG_SERVER_DESC                        = 0x0502;
@@ -224,7 +226,8 @@ public final static short 		EC_TAG_CATEGORY_COLOR                     = 0x1105;
 public final static short 		EC_TAG_CATEGORY_PRIO                      = 0x1106;
 public final static short 	EC_TAG_PREFS_GENERAL                      = 0x1200;
 public final static short 		EC_TAG_USER_NICK                          = 0x1201;
-public final static short 		EC_TAG_USER_USERHASH                      = 0x1202;
+public final static short 		EC_TAG_USER_HASH                          = 0x1202;
+public final static short 		EC_TAG_USER_HOST                          = 0x1203;
 public final static short 	EC_TAG_PREFS_CONNECTIONS                  = 0x1300;
 public final static short 		EC_TAG_CONN_DL_CAP                        = 0x1301;
 public final static short 		EC_TAG_CONN_UL_CAP	                  = 0x1302;
